updated list of implants